// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketSnoozePicker/> should render a DatePicker 1`] = `
<DatePicker
  applyClass="btn-success mr-2"
  buttonClasses={
    Array [
      "btn",
    ]
  }
  cancelClass="btn-secondary"
  endDate={"2018-10-26T07:00:00.000Z"}
  isOpen={false}
  minDate={"2017-12-22T07:00:00.000Z"}
  onApply={[MockFunction]}
  onHide={null}
  opens="left"
  ranges={
    Object {
      "In 1 day": Array [
        "2017-12-23T07:00:00.000Z",
        "2017-12-23T07:00:00.000Z",
      ],
      "In 3 days": Array [
        "2017-12-25T07:00:00.000Z",
        "2017-12-25T07:00:00.000Z",
      ],
      "In 3 hours": Array [
        "2017-12-22T10:00:00.000Z",
        "2017-12-22T10:00:00.000Z",
      ],
      "In 6 hours": Array [
        "2017-12-22T13:00:00.000Z",
        "2017-12-22T13:00:00.000Z",
      ],
      "in 1 week": Array [
        "2017-12-29T07:00:00.000Z",
        "2017-12-29T07:00:00.000Z",
      ],
    }
  }
  showCustomRangeLabel={false}
  singleDatePicker={true}
  startDate={"2018-10-26T07:00:00.000Z"}
  timePicker={true}
  toggle={[MockFunction]}
/>
`;

exports[`<TicketSnoozePicker/> should render a DatePicker 2`] = `
<DatePicker
  applyClass="btn-success mr-2"
  buttonClasses={
    Array [
      "btn",
    ]
  }
  cancelClass="btn-secondary"
  endDate={"2017-12-22T07:00:00.000Z"}
  isOpen={false}
  minDate={"2017-12-22T07:00:00.000Z"}
  onApply={[MockFunction]}
  onHide={null}
  opens="left"
  ranges={
    Object {
      "In 1 day": Array [
        "2017-12-23T07:00:00.000Z",
        "2017-12-23T07:00:00.000Z",
      ],
      "In 3 days": Array [
        "2017-12-25T07:00:00.000Z",
        "2017-12-25T07:00:00.000Z",
      ],
      "In 3 hours": Array [
        "2017-12-22T10:00:00.000Z",
        "2017-12-22T10:00:00.000Z",
      ],
      "In 6 hours": Array [
        "2017-12-22T13:00:00.000Z",
        "2017-12-22T13:00:00.000Z",
      ],
      "in 1 week": Array [
        "2017-12-29T07:00:00.000Z",
        "2017-12-29T07:00:00.000Z",
      ],
    }
  }
  showCustomRangeLabel={false}
  singleDatePicker={true}
  startDate={"2017-12-22T07:00:00.000Z"}
  timePicker={true}
  toggle={[MockFunction]}
/>
`;

exports[`<TicketSnoozePicker/> should render a DatePicker and log error when datetime has a wrong format 1`] = `
<DatePicker
  applyClass="btn-success mr-2"
  buttonClasses={
    Array [
      "btn",
    ]
  }
  cancelClass="btn-secondary"
  endDate={"2017-12-22T07:00:00.000Z"}
  isOpen={false}
  minDate={"2017-12-22T07:00:00.000Z"}
  onApply={[MockFunction]}
  onHide={null}
  opens="left"
  ranges={
    Object {
      "In 1 day": Array [
        "2017-12-23T07:00:00.000Z",
        "2017-12-23T07:00:00.000Z",
      ],
      "In 3 days": Array [
        "2017-12-25T07:00:00.000Z",
        "2017-12-25T07:00:00.000Z",
      ],
      "In 3 hours": Array [
        "2017-12-22T10:00:00.000Z",
        "2017-12-22T10:00:00.000Z",
      ],
      "In 6 hours": Array [
        "2017-12-22T13:00:00.000Z",
        "2017-12-22T13:00:00.000Z",
      ],
      "in 1 week": Array [
        "2017-12-29T07:00:00.000Z",
        "2017-12-29T07:00:00.000Z",
      ],
    }
  }
  showCustomRangeLabel={false}
  singleDatePicker={true}
  startDate={"2017-12-22T07:00:00.000Z"}
  timePicker={true}
  toggle={[MockFunction]}
/>
`;
